# MNVista

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build_mnvista.yml
src/: main.cpp  mnv.hpp  stats.cpp  stats.hpp  utils.cpp  utils.hpp  window.cpp  window.hpp
